--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,36 @@
-baseURL = 'https://bytecode.no/blogg'
+baseURL = 'https://bytecode.no/blogg/'
 languageCode = 'no-nb'
-title = 'Nils drakedrepar'
+title = 'Nils tenker høyt'
 theme = 'ananke'
+
+defaultContentLanguage = "no"
+
+enableRobotsTXT = true
+
+sectionPagesMenu = "main"
+
+[pagination]
+pagerSize = 3 # this is set low for demonstrating with dummy content. Set to a higher number
+
+[params]
+text_color = ""
+author = "Nils Larsgård"
+favicon = ""
+site_logo = ""
+description = "The last theme you'll ever need. Maybe."
+# choose a background color from any on this page: https://tachyons.io/docs/themes/skins/ and preface it with "bg-"
+background_color_class = "bg-black"
+# choose fitting and alignment styles for the featured image using Tachyons classes such as "cover|contain" for fitting and "bg-top|bg-center|bg-bottom" for alignment, or add any other class space-separated to customize further
+featured_image_class = "cover bg-top"
+# choose a color dimming class for the page or site header from any on this page: https://tachyons.io/docs/themes/skins/, preface it with "bg-" and add the value such as "-X0" where X is in [1,9]
+cover_dimming_class = "bg-black-60"
+recent_posts_number = 3
+
+
+[params.ananke.social.share]
+networks = ["bluesky", "linkedin"]
+[params.ananke.social.bluesky]
+username = "nilsdrakedrepar"
+
+[params.ananke.social.linkedin]
+username = "nilsmagnus"
