--- a/hugo.toml
+++ b/hugo.toml
@@ -18,7 +18,7 @@ text_color = ""
 author = "Nils Larsgård"
 favicon = ""
 site_logo = ""
-description = "The last theme you'll ever need. Maybe."
+description = "Nils tenker høyt"
 # choose a background color from any on this page: https://tachyons.io/docs/themes/skins/ and preface it with "bg-"
 background_color_class = "bg-black"
 # choose fitting and alignment styles for the featured image using Tachyons classes such as "cover|contain" for fitting and "bg-top|bg-center|bg-bottom" for alignment, or add any other class space-separated to customize further
